# amber

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  README.md  amber.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
agent/: Cargo.toml  test-protocol.py
agent/src/: main.rs
benchmarks/: README.md
benchmarks/results/: 2026-06-18-apple-silicon-m1pro.md
crates/amber/: Cargo.toml
crates/amber-core/: Cargo.toml
crates/amber-core/src/: bus.rs  cpu.rs  dtb.rs  hypervisor.rs  lib.rs  limiter.rs  loader.rs  lockdown.rs  memory.rs  net.rs  snapshot.rs  virtio.rs  vm.rs  vsock.rs
crates/amber-hvf/: Cargo.toml  build.rs
crates/amber-hvf/src/: ffi.rs  gicv2.rs  lib.rs  sysregs.rs
crates/amber-image/: Cargo.toml
crates/amber-image/src/: cpio.rs  flatten.rs  lib.rs  pack.rs  registry.rs
crates/amber-kvm/: Cargo.toml
crates/amber-kvm/src/: backend.rs  gic.rs  lib.rs
crates/amber-net/: Cargo.toml
crates/amber-net/src/: lib.rs
crates/amber/src/: daemon.rs  main.rs  manifest.rs  proto.rs
docs/: DEVLOG.md  architecture.md  networking-backends.md  snapshot-and-exec.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: virtio_chain.rs  vsock_packet.rs
integrations/.claude-plugin/: marketplace.json
integrations/agents/: AGENTS.md  README.md
integrations/agents/cline/: amber-sandbox.md
integrations/agents/cursor/rules/: amber-sandbox.mdc
integrations/agents/windsurf/rules/: amber-sandbox.md
integrations/claude-plugin/: README.md
integrations/claude-plugin/.claude-plugin/: plugin.json
integrations/claude-plugin/commands/: run.md
integrations/claude-plugin/scripts/: amber-exec.sh  amber-fetch.sh  amber-sandbox-repo.sh
integrations/claude-plugin/skills/amber-install/: SKILL.md
integrations/claude-plugin/skills/amber-sandbox/: SKILL.md
kernel/: resin.config  resin_defconfig
project-resorces/code/: Cargo.toml  STATUS.md  bus.rs  dtb.rs  ffi.rs  lib.rs  main.rs
project-resorces/docs/: ARCHITECTURE.md  CLUSTER.md  CONTROL-API.md  DESIGN.md  MANIFEST.md  MEMORY.md  PORTING.md  README.md  ROADMAP.md  SECURITY.md
scripts/: build-agent.sh  build-kernel.sh  fetch-assets.sh  install.sh  integration-test.sh  kvm-pause-test.sh  kvm-smp-test.sh  kvm-snapshot-test.sh  kvm-test.sh  package-release.sh  scale-load-test.sh
tools/initramfs/: README.md  build.py  init
