[workspace]
resolver = "2"
members = ["crates/amber-core", "crates/amber-hvf", "crates/amber-kvm", "crates/amber-image", "crates/amber-net", "crates/amber"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lupodevelop/amber"

# arm64 only. The HVF backend links only on macOS; the KVM backend (amber-kvm)
# only on Linux. Each is a per-target dependency of the `amber` binary.
[workspace.dependencies]
libc = "0.2"
vm-fdt = "0.3"
log = "0.4"
env_logger = "0.11"
amber-core = { path = "crates/amber-core" }
amber-hvf = { path = "crates/amber-hvf" }
amber-kvm = { path = "crates/amber-kvm" }
amber-image = { path = "crates/amber-image" }
amber-net = { path = "crates/amber-net" }
