[package]
name = "amber-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Exposes thin harness wrappers over the guest→host parsers (vsock packets,
# virtio descriptor chains) so the fuzz crate can drive them. Off by default.
fuzzing = []

[dependencies]
libc.workspace = true
vm-fdt.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
