[package]
name = "amber-hvf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Builds everywhere (so the workspace stays buildable), but only links the
# Hypervisor framework on macOS. On any other target the backend is empty and
# amber-core compiles alone; main.rs cfg-gates the call into it.
[dependencies]
amber-core.workspace = true
libc.workspace = true
log.workspace = true

[features]
# Software GICv2 backend: skip the in-kernel vGIC and emulate the GIC in
# userspace, which restores native WFI trapping and a working post-restore virtual
# timer (so snapshot/restore/fork/exec work on macOS). On by default; the runtime
# uses it unless AMBER_GIC=hw selects the in-kernel vGIC. Build with
# `--no-default-features` to drop the software GIC entirely.
default = ["swgic"]
swgic = []
