[package]
name = "amber"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-core.workspace = true
amber-image.workspace = true
log.workspace = true
env_logger.workspace = true
libc.workspace = true
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The HVF backend is linked into the binary only on macOS arm64. main.rs already
# cfg-gates the call site, so off-target the binary builds without it.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
amber-hvf.workspace = true
