[package]
name = "amber"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-core.workspace = true
amber-image.workspace = true
amber-net.workspace = true
log.workspace = true
env_logger.workspace = true
libc.workspace = true
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Forward to the backend's software-GICv2 mode (macOS arm64 only); selected at
# runtime with AMBER_GIC=sw. Build: `cargo build -p amber --features swgic`.
swgic = ["amber-hvf/swgic"]

# Each backend links only on its host. main.rs cfg-gates the call sites, so the
# binary builds with whichever backend fits the target (or neither, off-arch).
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
amber-hvf.workspace = true

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
amber-kvm.workspace = true
